--- a/public/css/index_styles.css
+++ b/public/css/index_styles.css
@@ -31,6 +31,20 @@ body {
     top: 10px;
 }
 
+@media (min-width: 768px) {
+    .descripcion{
+        font-size: 25px !important;
+        text-align: justify;
+    }
+}
+
+@media (max-width: 767px) {
+    .descripcion{
+        font-size: 50px !important;
+        text-align: justify;
+    }
+}
+
 .subtitulo{
     font-family: "Lato", sans-serif;
     font-weight: 700;
